--- a/templates/base.html
+++ b/templates/base.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Title</title>
-    <link rel="stylesheet" type="text/css" href="{% static "/bootstrap.css" %}">
-    <link rel="stylesheet" type="text/css" href="{% static "/carousel.css" %}">
+    <link rel="stylesheet" type="text/html" href="{% static "/bootstrap.css" %}">
+    <link rel="stylesheet" type="text/html" href="{% static "/carousel.css" %}">
 
     <script href="{% static "/bootstrap.bundle.js" %}" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
