--- a/static/carousel.css
+++ b/static/carousel.css
@@ -3,8 +3,8 @@
 /* Padding below the footer and lighter body text */
 
 body {
-  padding-top: 3rem;
-  padding-bottom: 3rem;
+  width: 100%;
+
   color: #5a5a5a;
 }
 
@@ -57,8 +57,12 @@ body {
 /* Featurettes
 ------------------------- */
 
-.featurette-divider {
+.featurette-divider{
   margin: 5rem 0; /* Space out the Bootstrap <hr> more */
+}
+
+.divider{
+  margin: 0; padding: 0;
 }
 
 /* Thin out the marketing headings */
