--- a/templates/base.html
+++ b/templates/base.html
@@ -7,14 +7,13 @@
     <title>Title</title>
     <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'carousel.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'add.css' %}">
 
-    <script href="{% static "/bootstrap.bundle.js" %}" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 
     <style>
-      body {
-          width: 100%;
-      }
       .smbtn{
           height: 20px; font-size: x-small; padding-top: 0; padding-bottom: 0; margin-bottom: 4px;
       }
@@ -39,9 +38,12 @@
     </style>
 </head>
 <body>
-{% include "navbar.html" %}
-<!-- 기본 템플릿 안에 삽입될 내용 -->
-{%  block content %}
+
+
+{% include "modal.html"%}
+
+{% block content %}
 {% endblock %}
+
 </body>
 </html>
