--- a/static/add.css
+++ b/static/add.css
@@ -37,24 +37,94 @@
     scroll-snap-align: start;
 }
 
-.m-img{
-   ;
+.snap-end{
+    scroll-snap-align: end;
+}
+
+.slogan-big{
+    margin-top: 10rem; margin-left: 5rem;
+
+    color: black;
+}
+
+.blank{
+    z-index: 0; margin: 0; padding: 0; background-color: white; border:0;
 }
 
 .part-1{
+     height: 100vh;
+    background-image: url("33.png") ;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 
 }
 
+.part-1 h1{
+ font-size: 6rem;
+    letter-spacing: -0.25rem ;
+   line-height: 1.3em;
+    font-weight: 200;
+}
+
+.part-1 h4{
+    font-size: 2rem;
+    letter-spacing: -0.1rem;
+    line-height: 1.3em;
+    font-weight: 300;
+}
+
+.part-1 strong{
+    font-weight: 900;
+}
+
+
 .part-2{
-    padding-top: 5rem;
-    padding-bottom: 5rem;
+    height: 100vh;
+    padding-top: 10vh;
+}
+
+.form-email{
+
 }
 
 .part-3{
-    padding-top: 5rem;
-    padding-bottom: 5rem;
+    height: 100vh;
 }
+
+#myCarousel{
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+}
+
+#myCarousel h2{
+    margin-top: 0.75rem;
+
+}
+
+#myCarousel p{
+    font-size: 0.75rem;
+    margin-left: 5rem;
+    margin-right: 5rem;
+}
+ .carousel-inner{
+
+ }
+
+ .carousel-control-prev{
+     justify-content: flex-start;
+ }
+
+ .carousel-control-next{
+     justify-content: flex-end;
+ }
+
+
 
 .marketing{
     scroll-behavior: smooth;
+}
+
+.part-4{
+
 }
