--- a/static/carousel.css
+++ b/static/carousel.css
@@ -5,7 +5,7 @@
 body {
   width: 100%;
 
-  color: #5a5a5a;
+  background-color: #c5d8e369;
 }
 
 
@@ -13,9 +13,7 @@ body {
 -------------------------------------------------- */
 
 /* Carousel base class */
-.carousel {
-  margin-bottom: 4rem;
-}
+
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
   bottom: 3rem;
@@ -24,7 +22,7 @@ body {
 
 /* Declare heights because of positioning of img element */
 .carousel-item {
-  height: 32rem;
+
 }
 .carousel-item > img {
   position: absolute;
@@ -32,6 +30,10 @@ body {
   left: 0;
   min-width: 100%;
   height: 32rem;
+}
+
+.carousel-control-prev, .carousel-control-next{
+
 }
 
 
@@ -43,8 +45,15 @@ body {
   margin-bottom: 1.5rem;
   text-align: center;
 }
+
+.marketing .col-lg-6{
+  text-align: center;
+  margin-bottom: 1.5rem;
+}
+
 .marketing h2 {
   font-weight: 400;
+
 }
 /* rtl:begin:ignore */
 .marketing .col-lg-4 p {
