--- a/static/add.css
+++ b/static/add.css
@@ -1,3 +1,4 @@
+
 .back-clean{
  background-color: rgba(255, 255, 255, 0);
 }
@@ -23,6 +24,7 @@
     height: 100vh;
     scroll-snap-type: y mandatory;
     overflow: auto;
+
 }
 
 #main::-webkit-scrollbar {
@@ -42,13 +44,8 @@
 }
 
 .slogan-big{
-    margin-top: 10rem; margin-left: 5rem;
-
+    margin-top: 15vh; margin-left: 5rem;
     color: black;
-}
-
-.blank{
-    z-index: 0; margin: 0; padding: 0; background-color: white; border:0;
 }
 
 .part-1{
@@ -57,18 +54,34 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+}
 
+@media (max-width: 960px) {
+    .slogan-big {
+        background-color: rgba(255, 255, 255, 0.7);
+        width: fit-content;
+        text-align: center;
+        padding: 2rem;
+        margin: 0 0 10vh 0;
+
+    }
+    .part-1{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-position: right;
+    }
 }
 
 .part-1 h1{
- font-size: 6rem;
+    font-size: calc(1rem + 3vw + 3vh);;
     letter-spacing: -0.25rem ;
-   line-height: 1.3em;
+    line-height: 1.3em;
     font-weight: 200;
 }
 
 .part-1 h4{
-    font-size: 2rem;
+    font-size: calc(1rem + 0.5vw + 0.5vh);
     letter-spacing: -0.1rem;
     line-height: 1.3em;
     font-weight: 300;
@@ -78,15 +91,34 @@
     font-weight: 900;
 }
 
+.part-2 a{
+    color: white;
+    text-decoration: none ;
 
+}
 .part-2{
     height: 100vh;
     padding-top: 10vh;
 }
 
-.form-email{
-
+.alert ul{
+    list-style: none;
+    padding-left: 5px;
 }
+
+.alert ul:last-child{
+    margin-bottom: 0;
+}
+
+.error-meg{
+    margin: 0;
+    display: flex;
+}
+
+#email, #title{
+ margin-bottom: 2rem;
+}
+
 
 .part-3{
     height: 100vh;
