--- a/static/add.css
+++ b/static/add.css
@@ -101,6 +101,7 @@
     padding-top: 10vh;
 }
 
+
 .alert ul{
     list-style: none;
     padding-left: 5px;
@@ -129,6 +130,22 @@
     padding-bottom: 10vh;
 }
 
+.add-carousel-indicators{
+     position: relative;
+     margin-bottom: 3rem
+ }
+
+@media (max-width: 960px){
+    #myCarousel{
+        padding-top: 4vh;
+    }
+
+    .add-carousel-indicators{
+     margin-bottom: 1rem
+ }
+
+}
+
 #myCarousel h2{
     margin-top: 0.75rem;
 
@@ -139,8 +156,8 @@
     margin-left: 5rem;
     margin-right: 5rem;
 }
- .carousel-inner{
-
+ .carousel-inner svg{
+    height: calc(80px + 10vw); width: calc(80px + 10vw);
  }
 
  .carousel-control-prev{
