--- a/templates/landing_page.html
+++ b/templates/landing_page.html
@@ -60,7 +60,7 @@
 
         <div class="part-3 snap-st">
             <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-indicators" style="position: relative; margin-bottom: 3rem">
+                    <div class="carousel-indicators add-carousel-indicators" >
                     <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                     <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
                     <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
@@ -70,12 +70,12 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col-lg-6">
-                                    <svg class="bd-placeholder-img rounded-circle" width="170" height="170" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 170x170" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">170x170</text></svg>
+                                    <svg class="bd-placeholder-img rounded-circle"  xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 170x170" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">170x170</text></svg>
                                     <h2>Heading</h2>
                                     <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
                                 </div><!-- /.col-lg-4 -->
                                 <div class="col-lg-6">
-                                    <svg class="bd-placeholder-img rounded-circle" width="170" height="170" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 170x170" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">170x170</text></svg>
+                                    <svg class="bd-placeholder-img rounded-circle"  xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 170x170" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">170x170</text></svg>
                                     <h2>Heading</h2>
                                     <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
                                 </div><!-- /.col-lg-6 -->
@@ -86,12 +86,12 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col-lg-6">
-                                    <svg class="bd-placeholder-img rounded-circle" width="170" height="170" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 170x170" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">170x170</text></svg>
+                                    <svg class="bd-placeholder-img rounded-circle"   xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 170x170" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">170x170</text></svg>
                                     <h2>Heading</h2>
                                     <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
                                 </div><!-- /.col-lg-4 -->
                                 <div class="col-lg-6">
-                                    <svg class="bd-placeholder-img rounded-circle" width="170" height="170" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 170x170" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">170x170</text></svg>
+                                    <svg class="bd-placeholder-img rounded-circle"  xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 170x170" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">170x170</text></svg>
                                     <h2>Heading</h2>
                                     <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
                                 </div><!-- /.col-lg-6 -->
@@ -104,12 +104,12 @@
 
                                 <div class="row">
                                 <div class="col-lg-6">
-                                    <svg class="bd-placeholder-img rounded-circle" width="170" height="170" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 170x170" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">170x170</text></svg>
+                                    <svg class="bd-placeholder-img rounded-circle"  xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 170x170" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">170x170</text></svg>
                                     <h2>Heading</h2>
                                     <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
                                 </div><!-- /.col-lg-4 -->
                                 <div class="col-lg-6">
-                                    <svg class="bd-placeholder-img rounded-circle" width="170" height="170" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 170x170" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">170x170</text></svg>
+                                    <svg class="bd-placeholder-img rounded-circle"  xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 170x170" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">170x170</text></svg>
                                     <h2>Heading</h2>
                                     <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
                                 </div><!-- /.col-lg-6 -->
@@ -158,7 +158,7 @@
           </div>
         </div>
 
-        <hr class="featurette-divider ">
+        <hr class="featurette-divider  snap-st">
 
         <div class="row featurette">
           <div class="col-md-7">
